<resources>
    <string name="app_name">Ethereal News</string>
    <string name="title_activity_main">Ethereal News</string>
    <string name="news_author">China Daily</string>
    <string name="news_title">This is a piece of News</string>
    <string name="news_date">2020–01-01</string>
    <string name="news_content">This is the official community for Genshin Impact!</string>
    <string name="news_toolbar">News</string>
    <string name="news_image">News Image</string>
    <string name="news_video">News Video</string>
    <string name="back_button">Back</string>
    <string name="search_button">搜索</string>
    <string name="favorite_button">Favorite</string>
    <string name="history_button">History</string>
    <string name="setting_button">Setting</string>
    <string name="settings_save">保存</string>
    <string name="news_detail_toolbar">新闻详情</string>
    <string name="news_result_toolbar">搜索结果</string>
    <string name="news_favorite_toolbar">我的收藏</string>
    <string name="news_history_toolbar">阅读历史</string>
    <string name="news_setting_toolbar">频道设置</string>
    <string name="settings_instruction">滑动删除频道, 点击加号添加频道, 长按自由排序</string>
    <string name="search_categories">搜索类别:</string>
    <string name="hint">Ethereal, 发现每一种可能!</string>
    <string name="start_time">起始搜索时间:</string>
    <string name="end_time">截止搜索时间:</string>
    <string name="choose_date">选择日期</string>
    <string name="choose_time">选择时间</string>
    <string name="default_start_time">默认向前检索所有新闻</string>
    <string name="default_end_time">默认为当前时间</string>
    <string-array name="news_categories">
        <item>全部</item>
        <item>娱乐</item>
        <item>军事</item>
        <item>教育</item>
        <item>文化</item>
        <item>健康</item>
        <item>财经</item>
        <item>体育</item>
        <item>汽车</item>
        <item>科技</item>
        <item>社会</item>
    </string-array>
</resources>