<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/news_detail_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"/>

    <TextView
        android:id="@+id/news_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/newsTitleBackground"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/news_detail_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_author"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="@color/newsAuthorBackground"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/news_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_date"
            android:textSize="12sp"
            android:textStyle="italic"
            android:textColor="@color/newsAuthorBackground"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/news_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_content"/>
</LinearLayout>
