<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_detail_toolbar"
            android:textStyle="bold"
            android:textColor="@color/appNameBackground"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/news_detail_image"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"
                android:visibility="visible"
                android:contentDescription="@string/news_image" />

            <TextView
                android:id="@+id/news_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_title"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/newsTitleBackground"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/news_detail_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/news_author"
                    android:textColor="@color/newsAuthorBackground"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/news_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/news_date"
                    android:textColor="@color/newsDateBackground"
                    android:textSize="12sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <TextView
                android:id="@+id/news_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/news_content"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="@color/newsContentBackground"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
