<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:padding="10dp"
    android:background="@drawable/ic_card_background">

    <ImageView
        android:id="@+id/news_item_image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:visibility="visible"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/news_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <TextView
            android:id="@+id/news_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/news_title"
            android:textColor="@color/newsTitleBackground"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/news_item_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/news_author"
            android:textColor="@color/newsAuthorBackground"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/news_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/news_date"
            android:textColor="@color/newsAuthorBackground"
            android:textSize="12sp"
            android:textStyle="italic"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>
